# insight-readiness-analyzer

./: .gitignore  README.md  Work rate dataset.xlsx  adversarial_logic.csv  adversarial_logic_policy.yaml  amazon_auto_policy.yaml  amazon_policy.yaml  app.py  chaos_policy.yaml  cleaned_chaos.csv  complete_chaos.csv  create_adversarial_csv.py  create_chaos.py  create_domain_datasets.py  create_killer_csv.py  debug_std.py  demo_policy.yaml  extreme_messy.csv  extreme_messy_policy.yaml  freelancers_auto_policy.yaml  freelancers_policy.yaml  freelancers_with_id.csv  generate_messy_demo.py  hospital_billing.csv  hospital_billing_policy.yaml  insurance_claims.csv  insurance_claims_policy.yaml  messy_demo.csv  messy_test_data.csv  messy_test_policy.yaml  phase8_data.csv  phase8_policy.yaml  pyproject.toml  pyrightconfig.json  report.json  report.md  robustness_challenge.csv  robustness_challenge_policy.yaml  run_all_datasets.py  sensitive_auto_policy.yaml  (+7 more)
.streamlit/: config.toml
src/ira/: cli.py
test_data/: reproduce_issue.py
tests/data/: messy_test_data_v2.csv  messy_test_data_v3.csv  stress_output.csv  stress_test_policy.json
tests/unit/: test_audit.py  test_audit_footer.py  test_cli_correct.py  test_cli_correct_artifacts.py  test_cli_profile.py  test_comparison.py  test_contracts.py  test_determinism.py  test_determinism_correct_outputs.py  test_imputation_thresholds.py  test_missing.py  test_parsing.py  test_parsing_failure_modes.py  test_pipeline.py  test_pipeline_idempotence.py  test_policy_runtime_validation.py  test_policy_schema.py  test_policy_validation.py  (+6 more)
(+24 files in other folders)
