[project]
name = "insight-readiness-analyzer"
version = "0.1.0"
description = "Insight Readiness Analyzer (OSS)"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "pytest>=7.0"
]

[project.scripts]
ira = "ira.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
